:recycle: refactor: Cambio a funciones de productos

--- a/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
+++ b/src/app/admin/pages/catalogos/agregarusuario/agregarusuario.component.html
@@ -63,7 +63,7 @@
 
 
     <!-- Botón para volver a la lista de usuarios -->
-    <a routerLink="/usuario" class="btn btn-secondary mt-3 w-100">
-      Volver a Lista de Usuarios
+    <a routerLink="/admin/usuarios" class="btn btn-secondary mt-3 w-100">
+        Volver a Lista de Usuarios
     </a>
 </div>
