--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -28,27 +28,39 @@
 
 <body>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-success" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="#page-top">
-                <img src="assets/img/imagen11.jpg" alt="Logo" height="80">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars ms-1"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li class="nav-item"><a class="nav-link text-teal" href="#productos">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link text-teal" href="#services">Servicios</a></li>
-                    <li class="nav-item"><a class="nav-link text-teal" href="#about">Nosotros</a></li>
-                    <li class="nav-item"><a class="nav-link text-teal" href="#team">Equipo</a></li>
-                    <li class="nav-item"><a class="nav-link text-teal" href="#contact">Contacto</a></li>
-                    <li class="nav-item"><a class="nav-link btn text-white px-3" style="background-color: #48c6ef;" href="/login2">Ingresar</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+   <!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-success" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand" href="#page-top">
+        <img src="assets/img/imagen11.jpg" alt="Logo" height="80">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <i class="fas fa-bars ms-1"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+          <li class="nav-item"><a class="nav-link text-teal" href="#productos">Productos</a></li>
+          <li class="nav-item"><a class="nav-link text-teal" href="#services">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link text-teal" href="#about">Nosotros</a></li>
+          <li class="nav-item"><a class="nav-link text-teal" href="#team">Equipo</a></li>
+          <li class="nav-item"><a class="nav-link text-teal" href="#contact">Contacto</a></li>
+  
+          <!-- Mostrar el nombre del usuario o el botón "Ingresar" -->
+          <li class="nav-item" *ngIf="usuarioActual; else ingresarLink">
+            <span class="nav-link text-white">
+              Bienvenido, {{ usuarioActual.nombre }}
+            </span>
+          </li>
+          <ng-template #ingresarLink>
+            <li class="nav-item">
+              <a class="nav-link btn text-white px-3" style="background-color: #48c6ef;" href="/login2">Ingresar</a>
+            </li>
+          </ng-template>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
     <!-- Carrousel -->
     <section id="carousel" class="carousel slide" data-bs-ride="carousel " style="scroll-margin-top: 80px;">
         <div class="carousel-inner">
