--- a/src/app/admin/pages/catalogos/dialogo-editar-usuario/dialogo-editar-usuario.component.html
+++ b/src/app/admin/pages/catalogos/dialogo-editar-usuario/dialogo-editar-usuario.component.html
@@ -1,31 +1,31 @@
-<h2 mat-dialog-title>Editar Usuario</h2>
-<mat-dialog-content>
-  <form [formGroup]="usuarioForm">
-    <mat-form-field>
-      <mat-label>Nombre</mat-label>
-      <input matInput formControlName="nombre">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Correo</mat-label>
-      <input matInput formControlName="correo">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Teléfono</mat-label>
-      <input matInput formControlName="telefono">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Dirección</mat-label>
-      <input matInput formControlName="direccion">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Rol</mat-label>
-      <input matInput formControlName="rol">
-    </mat-form-field>
-  </form>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button (click)="onCancel()">Cancelar</button>
-  <button mat-button color="primary" (click)="onSave()">Guardar</button>
-</mat-dialog-actions>
+<form [formGroup]="usuarioForm" (ngSubmit)="onSave()">
+  <mat-form-field>
+    <mat-label>Nombre</mat-label>
+    <input matInput formControlName="nombre" required>
+  </mat-form-field>
 
+  <mat-form-field>
+    <mat-label>Correo</mat-label>
+    <input matInput formControlName="correo" required>
+  </mat-form-field>
 
+  <mat-form-field>
+    <mat-label>Teléfono</mat-label>
+    <input matInput formControlName="telefono" required>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Dirección</mat-label>
+    <input matInput formControlName="direccion" required>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Rol</mat-label>
+    <input matInput formControlName="rol" required>
+  </mat-form-field>
+
+  <div class="buttons">
+    <button mat-button (click)="onCancel()">Cancelar</button>
+    <button mat-raised-button color="primary" type="submit">Guardar</button>
+  </div>
+</form>
